--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "boring-avatars": "^1.7.0",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^3.0.2",
     "quasar": "^2.6.0",
