--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "boring-avatars": "^1.7.0",
     "dotenv": "^16.0.3",
